<resources>
    <string name="app_name">List-it</string>
    <string name="faq">FAQ</string>
    <string name="notifications">Notificaciones</string>
    <string name="home">Home</string>
    <string name="members">Miembros</string>
    <string name="settings">Ajustes</string>
    <string name="supportText">Soporte Tecnico</string>
    <string name="messageText">Contestamos todos los dias</string>
    <string name="faqText">F.A.Q</string>
    <string name="question1">¿Por que mi aplicacion no inicia?</string>
    <string name="answer1"> - Revise la compatibilidad con la aplicacion.</string>
    <string name="question2">¿Por que aparece una pantalla en negro?</string>
    <string name="answer2"> - Intente reiniciando el telefono.</string>
    <string name="phoneNumbre">4491234567</string>
    <string name="setting1">Apoyanos</string>
    <string name="setting2">Cambiar idioma</string>
    <string name="setting3">Calificanos en la PlayStore</string>
    <string name="setting4">Cerrar Sesion</string>
    <string name="nombre_de_la_lista">Nombre de la lista</string>
    <string name="nombre_lista">Nombre lista</string>
    <string name="objetos_o_acciones_de_la_lista">Objetos o acciones de la lista</string>
    <string name="objetos">Objetos</string>
    <string name="fecha_para_completar">Fecha para completar</string>
    <string name="tiene_hora_para_completar">¿Tiene hora para completar?</string>
    <string name="requiere_un_presupuesto">¿Requiere un presupuesto?</string>
    <string name="mis_listas">Mis listas</string>
    <string name="ver_todo">Ver todo</string>
    <string name="nueva_lista">Nueva lista</string>
    <string name="settingsMainText">Ajustes</string>
    <string name="passwordHint">Contraseña</string>
    <string name="signInButton">Registrarse</string>
    <string name="logInButton">Iniciar Sesión</string>
    <string name="nameEditHint">Nombre</string>
    <string name="nameEmailHint">Email</string>
    <string name="passwordEditHint">Contraseña</string>
    <string name="registerButtonText">Registrarse</string>
    <string name="emailEditHint">Correo Electrónico</string>
    <string name="logInButtonText">Iniciar Sesión</string>
    <string name="titulo">Titulo</string>
    <string name="contenido">Contenido</string>
    <string name="fecha">Fecha</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>