<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaqFragment">

    <TextView
        android:id="@+id/supportScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/supportText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutPhone"
        android:layout_below="@id/supportScreen"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneIcon"
            android:src="@drawable/ic_phone"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneText"
            android:text="@string/phoneNumbre"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/phoneIcon"
            android:layout_marginStart="25dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutMessage"
        android:layout_below="@id/layoutPhone"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageIcon"
            android:src="@drawable/ic_message"
            android:layout_marginStart="70dp"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/messageText"
            android:text="@string/messageText"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/messageIcon"
            android:layout_marginStart="25dp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/faqScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/layoutMessage"
        android:text="@string/faqText"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question1"
        android:text="@string/question1"
        android:textStyle="bold"
        android:layout_below="@id/faqScreen"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer1"
        android:text="@string/answer1"
        android:layout_below="@id/question1"
        android:layout_marginStart="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/question2"
        android:text="@string/question2"
        android:textStyle="bold"
        android:layout_below="@id/answer1"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/answer2"
        android:text="@string/answer2"
        android:layout_below="@id/question2"
        android:layout_marginStart="40dp"/>

</RelativeLayout>