<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearLista">


    <TextView
        android:id="@+id/textViewNombreLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_lista"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:id="@+id/editTextNombreLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/nombre_lista"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textViewObjetosLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objetos_o_acciones_de_la_lista"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/editTextObjetosLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="220dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/objetos"
        android:layout_marginLeft="10dp"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp"
        app:srcCompat="@android:drawable/ic_menu_add" />


    <Switch
        android:id="@+id/switchFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="310dp"
        android:checked="false"
        android:text="@string/fecha_para_completar"
        tools:checked="false"
        android:onClick="mostrarFecha"/>

    <CalendarView
        android:id="@+id/calendarViewCalendario"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />



    <Switch
        android:id="@+id/switchHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tiene_hora_para_completar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="340dp"
        android:onClick="mostrarHora"/>

    <Switch
        android:id="@+id/switchPresupuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requiere_un_presupuesto"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="370dp"
        android:onClick="mostrarPresupuesto"/>

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:visibility="invisible"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="390dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="LaunchVerLista"/>

</RelativeLayout>