<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    tools:context=".ViewListaIzquierdaFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/TituloIzq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textSize="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/ContenidoIzq"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/contenido"
        android:textSize="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/FechaIzq"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/fecha"
        android:textSize="17dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"/>

</RelativeLayout>